add block class helper

--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -70,6 +70,10 @@ textarea {
 /* 4 Page styles
 ------------------------------------------------------------------------------*/
 
+.block {
+    margin-bottom: $space;
+}
+
 
 /* 5 Footer
 ------------------------------------------------------------------------------*/
