--- a/dev/sass/partial/_resets.scss
+++ b/dev/sass/partial/_resets.scss
@@ -62,7 +62,7 @@ table{
 
 /** 
  * Fix windows phone viewport bug
- * http://timkadlec.com/2013/01/windows-phone-8-and-device-width 
+ * http://goo.gl/knRaIp
  */
 
 @-webkit-viewport{width: device-width}
@@ -72,7 +72,7 @@ table{
 @viewport{width: device-width}
 
 
-/* https://github.com/ImBobby/suit-baze/issues/7
+/* http://goo.gl/e0gJzS
 --------------------------------------------------------------------------- */
 
 input[type="search"] {
