--- a/dev/sass/modules/_buttons.scss
+++ b/dev/sass/modules/_buttons.scss
@@ -4,6 +4,16 @@
 
 $BTN_PADDING: $space/3 $space;
 
+@mixin btnStyle( $bg, $color: #fff ) {
+    color: $color;
+    background: $bg;
+
+    &:hover,
+    &:focus {
+
+    }
+}
+
 
 /* Base Style
 --------------------------------------------------------------------------- */
@@ -15,10 +25,13 @@ $BTN_PADDING: $space/3 $space;
     font-family: inherit;
     line-height: $base_line_height;
     text-align: center;
+    white-space: nowrap;
     vertical-align: middle;
     color: $black80;
     background: #ddd;
-
+    cursor: pointer;
+    user-select: none;
+    
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 
     &:focus {
