--- a/dev/sass/modules/_forms.scss
+++ b/dev/sass/modules/_forms.scss
@@ -11,6 +11,33 @@ $input_bg               : #fff;
 /* Base style
 --------------------------------------------------------------------------- */
 
+legend {
+    margin-bottom: $space/2;
+}
+
+/**
+ * Fix small bullet on Webkit
+ * http://goo.gl/WgqfpM
+ */
+input[type="password"] {
+    font: small-caption;
+    font-size: 1em;
+}
+
+/** 
+ * Hide input type number spinner
+ * http://goo.gl/lcCQgB
+ */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    margin: 0;
+    -webkit-appearance: none;
+}
+
+input[type="number"] {
+    -moz-appearance:textfield;
+}
+
 .form__row {
     margin-bottom: $space/2;
 }
@@ -37,6 +64,10 @@ $input_bg               : #fff;
     }
 }
 
+
+/* Modifier
+--------------------------------------------------------------------------- */
+
 .form-input--error {
     border-color: #d32c31;
 
@@ -52,10 +83,6 @@ $input_bg               : #fff;
         border-color: #4eb74a;
     }
 }
-
-
-/* Modifier
---------------------------------------------------------------------------- */
 
 .form-input--block {
     width: 100%;
