--- a/dev/sass/partial/_helpers.scss
+++ b/dev/sass/partial/_helpers.scss
@@ -9,7 +9,8 @@
     visibility: hidden;
 }
 
-.visuallyhidden {
+.visuallyhidden,
+.sr-only {
     border: 0;
     clip: rect(0 0 0 0);
     height: 1px;
@@ -34,7 +35,8 @@
     visibility: hidden;
 }
 
-.clearfix:after {
+.clearfix:after,
+.cf:after {
     display: table;
     clear: both;
     content: '';
@@ -53,6 +55,7 @@
 }
 
 .ellipsis {
+    display: block;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
