remove/modify comments.

--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -1,18 +1,10 @@
-/*******************************************************************************
+/*! [PROJECT_NAME] | December 2014 | Suitmedia */
 
-    Title :  
-    Date  :  November 2014
-    Author:  Suitmedia (http://www.suitmedia.com)
-
-********************************************************************************
-
-	1. Font-face
-	2. Basic styles
-	3. Header
-	4. Page styles
-	5. Footer
-
-*******************************************************************************/
+//	1. Font-face
+//	2. Basic styles
+//	3. Header
+//	4. Page styles
+//	5. Footer
 
 @import "partial/_normalize";
 @import "partial/_variables";
@@ -24,13 +16,13 @@
 @import "modules/_modules";
 @import "plugin/_plugin";
 
-/* 1 Font-face
---------------------------------------------------------------------------- */
+// 1 Font-face
+// ------------------------------------------------------------------------ //
 
 
 
-/* 2 Basic styles
---------------------------------------------------------------------------- */
+// 2 Basic styles
+// ------------------------------------------------------------------------ //
 
 * {
     box-sizing: border-box;
@@ -67,16 +59,16 @@ textarea {
     margin-bottom: $space;
 }
 
-/* 3 Header
---------------------------------------------------------------------------- */
+// 3 Header
+// ------------------------------------------------------------------------ //
 
 
-/* 4 Page styles
---------------------------------------------------------------------------- */
+// 4 Page styles
+// ------------------------------------------------------------------------ //
 
 
-/* 5 Footer
---------------------------------------------------------------------------- */
+// 5 Footer
+// ------------------------------------------------------------------------ //
 
 
 
