--- a/dev/sass/modules/_breadcrumb.scss
+++ b/dev/sass/modules/_breadcrumb.scss
@@ -1,15 +1,15 @@
 
 // http://www.w3.org/html/wg/drafts/html/master/common-idioms.html#rel-up
 
-/* Config
---------------------------------------------------------------------------- */
+// Config
+// ------------------------------------------------------------------------ //
 
 $bread_space        : $space/2;
 $bread_separator    : '/';
 
 
-/* Style
---------------------------------------------------------------------------- */
+// Style
+// ------------------------------------------------------------------------ //
 
 /*ol*/.breadcrumb {
     padding: 0;
