--- a/dev/sass/modules/_buttons.scss
+++ b/dev/sass/modules/_buttons.scss
@@ -1,6 +1,6 @@
 
-/* Setup
---------------------------------------------------------------------------- */
+// Setup
+// ------------------------------------------------------------------------ //
 
 $BTN_PADDING: $space/3 $space;
 
@@ -15,8 +15,8 @@ $BTN_PADDING: $space/3 $space;
 }
 
 
-/* Base Style
---------------------------------------------------------------------------- */
+// Base Style
+// ------------------------------------------------------------------------ //
 
 .btn {
     display: inline-block;
@@ -44,8 +44,8 @@ $BTN_PADDING: $space/3 $space;
 }
 
 
-/* Modifier
---------------------------------------------------------------------------- */
+// Modifier
+// ------------------------------------------------------------------------ //
 
 .btn--block {
     width: 100%;
