--- a/dev/sass/modules/_pagination.scss
+++ b/dev/sass/modules/_pagination.scss
@@ -11,8 +11,8 @@
  */
 
 
-/* Config
---------------------------------------------------------------------------- */
+// Config
+// ------------------------------------------------------------------------ //
 
 $paging_padding: $space/4 $space/2;
 
@@ -25,8 +25,8 @@ $paging_active_color    : #f8f8f8;
 $paging_active_bg       : #888;
 
 
-/* Style
---------------------------------------------------------------------------- */
+// Style
+// ------------------------------------------------------------------------ //
 
 .paging {
     padding: 0;
