--- a/dev/sass/modules/_table.scss
+++ b/dev/sass/modules/_table.scss
@@ -18,8 +18,8 @@
 
 \*--------------------------------*/
 
-/* Base style
---------------------------------------------------------------------------- */
+// Base style
+// ------------------------------------------------------------------------ //
 
 $table_cell_padding         : .4em;
 $table_cell_padding_compact : .2em .4em;
