--- a/dev/sass/modules/_typography.scss
+++ b/dev/sass/modules/_typography.scss
@@ -1,6 +1,6 @@
 
-/* Ratio variables
---------------------------------------------------------------------------- */
+// Ratio variables
+// ------------------------------------------------------------------------ //
 
 $MINOR_SECOND   : 1.067;
 $MAJOR_SECOND   : 1.125;
@@ -16,8 +16,8 @@ $MINOR_SEVENTH  : 1.778;
 $RATIO          : $PERFECT_FOURTH;
 
 
-/* Functions and Mixins
---------------------------------------------------------------------------- */
+// Functions and Mixins
+// ------------------------------------------------------------------------ //
 
 @function getLineHeight($font_size) {
     $temp: $base_line_height / $font_size * 1em;
@@ -61,8 +61,8 @@ $RATIO          : $PERFECT_FOURTH;
 }
 
 
-/* Styles
---------------------------------------------------------------------------- */
+// Styles
+// ------------------------------------------------------------------------ //
 
 h1,
 .h1 {
