--- a/dev/sass/partial/_variables.scss
+++ b/dev/sass/partial/_variables.scss
@@ -1,6 +1,6 @@
 
-/* Typography
---------------------------------------------------------------------------- */
+// Typography
+// ------------------------------------------------------------------------ //
 
 $base_font_size     : 16px;
 $base_line_height   : 1.6em;
@@ -9,8 +9,8 @@ $space              : $base_line_height;
 
 
 
-/* Colors
---------------------------------------------------------------------------- */
+// Colors
+// ------------------------------------------------------------------------ //
 
 $black              : #222;
 $black90            : lighten($black, 10%);
@@ -31,8 +31,8 @@ $selection_color    : $black;
 
 
 
-/* Break Points
---------------------------------------------------------------------------- */
+// Break Points
+// ------------------------------------------------------------------------ //
 
 $small              : "screen and (min-width: 20em)";
 $small_portrait     : "screen and (min-width: 20em) and (orientation: portrait)";
