--- a/dev/sass/partial/_print.scss
+++ b/dev/sass/partial/_print.scss
@@ -1,7 +1,7 @@
 @media print {
     * {
         background: transparent !important;
-        color: #000 !important; /* Black prints faster: h5bp.com/s */
+        color: #000 !important;
         box-shadow: none !important;
         text-shadow: none !important;
     }
@@ -19,10 +19,6 @@
         content: " (" attr(title) ")";
     }
 
-    /*
-     * Don't show links for images, or javascript/internal links
-     */
-
     .ir a:after,
     a[href^="javascript:"]:after,
     a[href^="#"]:after {
@@ -36,7 +32,7 @@
     }
 
     thead {
-        display: table-header-group; /* h5bp.com/t */
+        display: table-header-group;
     }
 
     tr,
