--- a/dev/sass/modules/_modules.scss
+++ b/dev/sass/modules/_modules.scss
@@ -1,8 +1,8 @@
-@import "_typography";
-@import "_table";
-@import "_buttons";
-@import "_baze-grid";
-@import "_forms";
-@import "_breadcrumb";
-@import "_pagination";
-@import "_media";
+@import "typography";
+@import "table";
+@import "buttons";
+@import "baze-grid";
+@import "forms";
+@import "breadcrumb";
+@import "pagination";
+@import "media";
