--- a/dev/sass/modules/_breadcrumb.scss
+++ b/dev/sass/modules/_breadcrumb.scss
@@ -1,35 +1,38 @@
 
-// http://www.w3.org/html/wg/drafts/html/master/common-idioms.html#rel-up
+// http://goo.gl/E1YNsD
 
 // Config
 // ------------------------------------------------------------------------ //
 
-$bread_space        : $space/2;
-$bread_separator    : '/';
+$bread_space        : ($space / 2);
+$bread_separator    : '→';
 
 
 // Style
 // ------------------------------------------------------------------------ //
 
-/*ol*/.breadcrumb {
+/*ul*/.breadcrumb {
     padding: 0;
-    margin-left: $bread_space * -1;
     list-style: none;
+
+    &:after {
+        display: table;
+        clear: both;
+        content: '';
+    }
 
     > li {
         position: relative;
-        display: inline-block;
-        padding: 0 $bread_space;
+        float: left;
 
-        &:after {
-            position: absolute;
-            right: 100%;
+        &:before {
+            margin: 0 $bread_space;
             color: #444;
             content: $bread_separator;
         }
 
-        &:first-child:after {
-            content: '';
+        &:first-child:before {
+            display: none;
         }
     }
 }
